name:                gist-image
version:             0.1.0.0
synopsis:            Gist an image
description:         Please see README.md
homepage:            https://github.com/expipiplus1/gist-image
license:             BSD3
license-file:        LICENSE
author:              Joe Hermaszewski
maintainer:          gister.roboto@monoid.al
copyright:           2017 Joe Hermaszewski
category:            Web
build-type:          Simple
extra-source-files:  default.nix shell.nix pkgs.nix haskell-packages.nix
cabal-version:       >=1.10

executable gist-image
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , turtle
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/expipiplus1/gist-image
